--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,6 +3,6 @@ recursive-include flaskrilio/features/steps *.py
 recursive-include flaskrilio/templates *.xml
 recursive-include flaskrilio/twimls *.xml
 recursive-include flaskrilio *.py *.sh *.txt .behaverc schema.sql *.cfg
-include requirements.pip README
+include flaskrilio/reports/README.txt requirements.pip README
 prune flaskrilio/handlers/.ropeproject
 prune flaskrilio/features/.ropeproject
